--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,30 @@
-<p>navbar works!</p>
+<!-- <li><a [routerLink]="['/pizzas']">Pizzas</a></li>-->
+<header>    
+    <nav>
+        <div>
+            <ul class="menu">          
+                <li><i class="fa-solid fa-bars"></i>  
+                    <ul>           
+                        <li><a href="">Hacer test</a>
+                            <ul>
+                                <li><a href="">PDA</a></li>
+                                <li><a href="">Kolb</a></li>
+                                <li><a href="">Vesinger</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="">Ver resultados</a></li>
+                        <li><a href="">Editar datos</a></li>            
+                        <li><a href="">Informe de avances</a></li>
+                        <li><a href="">Resultados postulantes</a></li>
+                        <li><a href="">Informes generales</a></li>
+                        <li><a href="">Alta postulante</a></li>
+                        <li><a href="">Informes</a></li>
+                    </ul>
+                </li>
+            </ul> 
+        </div>
+        <img class="imagenlogo" src="../assets/images/logoseñority.png" alt="logo de Señority">      
+    </nav>
+    <a href="#" class="cta"><button>Contactenos</button></a>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</header>
